# sovereign-mvp

./: .gitignore  Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
